# tg-send-cli

./: LICENSE  README.md  install.sh  pyproject.toml
telegram_file_sender/: __init__.py  main.py
