[project]
name = "tg-send-cli"
version = "1.1.0"
description = "Send files to Telegram contacts from your CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Kostiantyn Bielienko", email = "konstantinbelenko36@gmail.com" }
]
keywords = ["telegram", "cli", "file-sender", "file-upload", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]
dependencies = [
    "telethon>=1.34",
    "rich>=13.0",
    "thefuzz>=0.22",
    "prompt_toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/ConstantineB6/tg-send-cli"
Repository = "https://github.com/ConstantineB6/tg-send-cli"
Issues = "https://github.com/ConstantineB6/tg-send-cli/issues"

[project.scripts]
tgsend = "telegram_file_sender.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_file_sender"]
